package com.project;

public enum VehicleType {
    CAR,
    BIKE,
    TRUCK
}
